@@ -378,6 +378,15 @@
       context RuleSetView menu when no rules are selected"
     </p>
   </li>
+
+  <li>
+    <p>
+      fixed SF bug 3039681 "context-menu items inconsistent for
+      Single/Multiple rules". When several rules are selected in rule
+      set, some context menu itmes should turn to plural.
+    </p>
+  </li>
+
 </ul>
 
 
